--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - pytorch
   - torchvision
   - torchaudio
-  - pytorch-cuda=12.1
+  - pytorch-cuda=11.8
   - pytorch-lightning
   - hydra-core
   - numpy
@@ -19,3 +19,9 @@ dependencies:
   - scikit-learn
   - jupyterlab
   - onnx
+  - pip
+  - pip:
+      - jax
+      - jaxlib
+      - flax
+      - optax
